--- a/netlify.toml
+++ b/netlify.toml
@@ -21,4 +21,11 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  functions = "netlify/functions" 
+  functions = "netlify/functions"
+
+[dev]
+  command = "npm run dev"
+  port = 5173
+  targetPort = 5174
+  functionsPort = 8888
+  publish = "dist" 
