--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,11 @@
   [headers.values]
     Content-Type = "application/javascript"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [build]
   command = "npm run build"
   publish = "dist"
