--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
+    // "paths": {
+    //   "@/*": ["src/*"]
+    // },
     "lib": [
       "dom",
       "dom.iterable",
